add the rule by month

--- a/src/visitas_vendedores_v2.ipynb
+++ b/src/visitas_vendedores_v2.ipynb
@@ -11,6 +11,7 @@
     "import numpy as np\n",
     "import unicodedata\n",
     "import re\n",
+    "import datetime\n",
     "# import awswrangler as wr"
    ]
   },
@@ -2370,6 +2371,61 @@
     "\n",
     "# Display the updated DataFrame\n",
     "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-10-03 14:40:16.935531\n",
+      "False\n",
+      "202310\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "import os\n",
+    "\n",
+    "# Get the current date\n",
+    "current_date = datetime.datetime.now()\n",
+    "\n",
+    "# Check if today is the last day of the month\n",
+    "is_last_day_of_month = (current_date + datetime.timedelta(days=1)).day == 1\n",
+    "\n",
+    "# Define the base file name\n",
+    "base_file_name = \"name\"\n",
+    "\n",
+    "# Get the period of the month (YYYYMM format)\n",
+    "period_of_month = current_date.strftime(\"%Y%m\")\n",
+    "\n",
+    "print(current_date)\n",
+    "print(is_last_day_of_month)\n",
+    "print(period_of_month)\n",
+    "# print(current_date)\n",
+    "\n",
+    "# # Construct the file name\n",
+    "file_name = f\"{base_file_name}_{period_of_month}.csv\"\n",
+    "\n",
+    "# # Specify the directory where you want to save the file\n",
+    "save_directory = '/path/to/your/directory'\n",
+    "\n",
+    "# # Full path to the file\n",
+    "file_path = os.path.join(save_directory, file_name)\n",
+    "\n",
+    "# Check if today is the last day of the month and save the file\n",
+    "if is_last_day_of_month:\n",
+    "    # Here, you can perform any actions to save the file with the constructed name.\n",
+    "    # For example, you can create an empty file.\n",
+    "    with open(file_path, \"w\") as file:\n",
+    "        pass\n",
+    "\n",
+    "print(f\"File saved as: {file_path}\")\n"
    ]
   }
  ],
